delivery, contacts, favorites, comparison

--- a/kontakty.html
+++ b/kontakty.html
@@ -383,105 +383,77 @@
                       <div class="span8 ">
                           <div class="ty-sidebox-important">
                               <div class="ty-sidebox-important__title">
-                                  <h1 class="ty-sidebox-important__title-wrapper">Доставка и оплата</h1>
+                                  <h1 class="ty-sidebox-important__title-wrapper">Контакты</h1>
                               </div>
                               <div class="breadcrumbs-grid ">
                                 <div id="breadcrumbs_158">
                                     <div class="ty-breadcrumbs clearfix" itemscope itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem"><a href="/" class="ty-breadcrumbs__a" itemprop="item"><span itemprop="name">Главная</span><meta itemprop="position" content="1"></a></span><span class="ty-breadcrumbs__slash">/</span>
-                                    <span class="ty-breadcrumbs__current">Доставка и оплата</span></div>
+                                        <span class="ty-breadcrumbs__current">Контакты</span></div>
                                 </div>
                               </div>
                               <div class="ty-sidebox-important__body">
-                                  <div class="ty-wysiwyg-content"  data-ca-live-editor-object-id="56" data-ca-live-editor-object-type="pages">
-                                    <h2>
-                                        <svg width="20" height="20" style="margin-right:10px">
-                                            <use href="assets/templates/new/images/sprite.svg#payments"></use>
-                                        </svg>Оплата
-                                    </h2>
-<p><strong><svg width="20" height="20" style="margin-right:5px">
-        <use href="assets/templates/new/images/sprite.svg#info"></use>
-    </svg>
-    Оплата производится наличными курьеру, либо посредством услуги E-POS</strong></p>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Оплата через ЕРИП</h3>
-    <div style="display:flex;flex-wrap:wrap;margin-left:-30px;margin-top:-30px">
-        <div style="margin-top:30px;flex:5 0 0%;margin-left:30px;min-width:250px;max-width:100%">
-            Вам необходимо произвести платеж в любой системе, позволяющей проводить оплату через ЕРИП (пункты банковского обслуживания, банкоматы, платежные терминалы, системы интернет-банкинга, клиент-банкинга и т.п.).
-            <ol>
-                <li>Для этого в перечне услуг e-POS перейдите в раздел: <strong>Сервис E-POS / E-POS - оплата товаров и услуг</strong></li>
-                <li>В поле "Номер лицевого счета" введите <strong>14387-1-1</strong> и нажмите "Продолжить"</li>
-                <li>Укажите сумму для оплаты</li>
-            </ol>
+
+                                <div style="display:flex;flex-wrap:wrap;margin-left:-30px;margin-top:-30px">
+                                    <div style="border:1px solid #D9D9D9;padding:25px 5%;margin-top:30px;flex:1 1 calc(50% - 30px);margin-left:30px;min-width:270px;max-width:100%">
+
+                                    <div class="ty-wysiwyg-content fz16"  data-ca-live-editor-object-id="56" data-ca-live-editor-object-type="pages">
+                                        <h2>Наши контакты</h2>
+    <p><span class="location" style="display:inline-block;width:15px;height:20px;background-size:contain;margin-right:5px"></span>г. Минск, ул. Филимонова, 55/3</p>
+    <div style="display:flex;padding-top:1em">
+        <div class="footer-img__group">
+            <a href="https://msngr.link/vi/375293711174">
+                <div class="footer-menu__contacts-item_img viber"></div>
+            </a>
+            <a href="https://msngr.link/tg/375293711174" style="padding-top:0">
+                <div class="footer-menu__contacts-item_img telegram"></div>
+            </a>
         </div>
-        <div style="text-align:center;margin-top:30px;flex:1 1 0%;margin-left:30px;min-width:250px;max-width:100%;padding-top:0">
-            <img class="qr_code" src="doc/images/qr.png" alt="QR-код для оплаты" width="120" height="120" style="display:block;margin:0 auto" />
-            <strong style="display:inline-block;padding-top:1em;line-height:1.4">Отсканируйте QR-код для оплаты</strong></td>
-        </div>
+        <a href="tel:+375293711174" class="footer-menu__contacts-item_title" style="padding-top:0">
+            +375 (29) <span>371-11-74</span>
+        </a>
     </div>
-    <p><strong>ВНИМАНИЕ!</strong> До получения подтверждения оплаты со стороны ИП Изотов Д.В., <strong>ОБЯЗАТЕЛЬНО</strong> сохраняйте квитанцию или чек об оплате. В случае возникновения спорных ситуации и/или ошибки со стороны банка, ИП Изотов Д.В. может потребовать выслать копию квитанции или чека об оплате для подтверждения платежа.</p>
-</div>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Оплата по QR приложением Оплати</h3>
-    <p>“Оплати” — это мобильная система оплаты электронными деньгами. Платежи проводятся с помощью QR-кода. Для оплаты достаточно только смартфон!</p>
-    <p>Скачать приложение «Оплати» можно в App Store, Google Play, AppGallery:  <a href="https://getapp.o-plati.by/">https://getapp.o-plati.by</a>   Пополнение “виртуального кошелька” с карточек любых банков без комиссии, через ЕРИП, банковским переводом или переводом с другого кошелька «Оплати», подробнее на сайте сервиса https://www.o-plati.by</p>
-    <p><strong>Для оплаты </strong>приложением «Оплати» необходимо выбрать способ оплаты «Оплати» или указать в комментариях желаемый способ оплаты и оформить заказ.</p>
-    <p>На указанный в заказе e-mail или другой удобный мессенджер придет ссылка для оплаты заказа.</p>
-    <p>Перейдя по ссылке с мобильного устройства откроется приложение «Оплати» с детализацией платежа. Для оплаты необходимо нажать «Далее» и подтвердить платеж.</p>
-    <p>Если ссылка открывается с ПК, то на экране появится QR-код. Отсканировать QR-код приложением «Оплати» или камерой смартфона, подтвердить оплату.</p>
-    <p>Электронный чек оплаты смотреть в выписке платежей приложения «Оплати».</p>
-</div>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Онлайн-оплата</h3>
-    <p>Оплата банковскими картами осуществляется через <a href="https://alfa-biz.by/online/e_com/" rel="nofollow" target="_blank">ЗАО «Альфа-Банк»</a>.</p>
-    <p>К оплате принимаются карты международных платежных систем VISA, MasterCard, платежной системы БЕЛКАРТ. Оплату также можно совершить, посредством сервиса Apple Pay.</p>
-    <p>Безопасность совершения платежа обеспечивается современными методами проверки, шифрования и передачи данных по закрытым каналам связи.</p>
-    <p>Ввод данных карточки осуществляется на защищенной авторизационной странице банка. Для оплаты необходимо ввести реквизиты карточки: номер, имя держателя, срок действия и трехзначный код безопасности. Трёхзначный код безопасности (CVV2 для VISA, CVC2 для MasterCard) — это три цифры, находящиеся на обратной стороне карточки. Если карточка поддерживает технологию 3DSecure или Интернет-пароль для держателей карточек БЕЛКАРТ, Вы будете перенаправлены на страницу банка, выпустившего карточку, для ввода кода безопасности. При оплате с помощью Apple Pay выберете карту из приложения Wallet, воспользуйтесь код-паролем или иным способом аутентификации, в зависимости от того, какой способ выбран в приложении</p>
-    <p>Предоставляемая Вами персональная информация (например: имя, адрес, телефон, e-mail, номер банковской карты и прочее) является конфиденциальной и не подлежит разглашению. Данные карточки передаются только в зашифрованном виде и не сохраняются на данном интернет-ресурсе.</p>
-</div>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Оплата картами рассрочки</h3>
-    <p><span>К оплате принимаются карты рассрочки:<br /></span></p>
-    <ul>
-    <li><span>Карта покупок 2 месяца;</span></li>
-    <li><span>Карта Халва mix 2 месяца;</span></li>
-    <li><span>Карта Халва max 4 месяца;</span></li>
-    <li><span>Карта Черепаха от ВТБ 8 месяцев.</span></li>
-    <li><span>Онлайн рассрочка от РРБ банкана 3 месяца</span></li>
-    </ul>
-</div>
+    <div style="display:flex;padding-top:0.5em">
+        <div class="footer-img__group">
+            <a href="https://msngr.link/vi/375291060645">
+                <div class="footer-menu__contacts-item_img viber"></div>
+            </a>
+            <a href="https://msngr.link/tg/375291060645" style="padding-top:0">
+                <div class="footer-menu__contacts-item_img telegram"></div>
+            </a>
+        </div>
+        <a href="tel:+375291060645" class="footer-menu__contacts-item_title" style="padding-top:0">
+            +375 (29) <span>106-06-45</span>
+        </a>
+    </div>
+    <p style="padding-top:1em"><span class="time" style="display:inline-block;width:20px;height:20px;background-size:contain;margin-right:5px"></span>Пн-Пт 10.00 - 19.00</p>
+    <p style="padding-top:0"><span class="time" style="display:inline-block;width:20px;height:20px;background-size:contain;margin-right:5px"></span>Сб-Вс 10.00 - 18.00</p>
+    <p style="padding-top:1em"><a class="ty-exception__links-a greeny" href="mailto:zakaz@vmetre.by" target="_blank">
+        <span class="mail" style="display:inline-block;width:20px;height:15px;background-size:contain;margin-right:5px"></span>zakaz@vmetre.by</a>
+    </p>
+    <h3>
+        <svg width="24" height="24">
+            <use href="assets/templates/new/images/sprite.svg#documents"></use>
+        </svg>
+        Реквизиты компании
+    </h3>
+    <p>ИП Изотов Дмитрий Вадимович<br>
+        УНП 193557396, зарегистрирован в торговом реестре 512199 от 11 июня 2021г, свидетельство о регистрации 193557396 от 09.06.2021 Минским горисполкомом<br>
+        Юридический адрес: Пр-т Рокоссовского 76-212, 220095, г. Минск</p>
+    <!-- instagram link -->
+    <!-- <div style="margin-top: 20px;"><a href="https://www.instagram.com/vmetre.by/" target="_blank"> <img src="doc/images/other/insta.svg" alt="instagram" width="37" height="37" /> </a></div> -->
+                                    </div>
+
+                                </div>
+                                <div style="border:1px solid #D9D9D9;padding:25px 5%;margin-top:30px;flex:1 1 calc(50% - 30px);margin-left:30px;min-width:270px;max-width:100%">
+
+                                    <div class="ty-wysiwyg-content"  data-ca-live-editor-object-id="56" data-ca-live-editor-object-type="pages">
+                                        <h2>Наше местоположение</h2>
+    <div style="position: relative; overflow: hidden;"><iframe style="position:relative;border:none" src="https://yandex.by/map-widget/v1/-/CCUJNCgfsC" width="560" height="400"></iframe></div>
                                     </div>
                                 </div>
                             </div>
+                            </div>
                         </div>
-                        <div class="span8">
-                            <div class="ty-sidebox-important">
-                                <div class="ty-sidebox-important__body">
-                                    <div class="ty-wysiwyg-content full"  data-ca-live-editor-object-id="56" data-ca-live-editor-object-type="pages">
-                                        <h2>
-                                            <svg width="20" height="20" style="margin-right:10px">
-                                                <use href="assets/templates/new/images/sprite.svg#delivery"></use>
-                                            </svg>Доставка
-                                        </h2>
-<div style="display:flex;flex-wrap:wrap;margin-left:-30px;margin-top:-30px">
-    <div style="border:1px solid #D9D9D9;padding:25px 5%;margin-top:30px;flex:1 1 calc(50% - 30px);margin-left:30px;min-width:250px;max-width:100%">
-        <h3>Доставка по г. Минску</h3>
-        <p>Минимальная сумма заказа на доставку 100 руб.</p>
-        <p>Бесплатная доставка от 700 руб.</p>
-        <p>Стоимость доставки суммой заказа до 200 руб 30руб больше 200р 15руб</p>
-        <p>Бесплатная доставка напольных покрытий от 15 м.кв</p>
-        <p>Доставка осуществляется до подъезда, либо до ворот частного дома.</p>
-    </div>
-    <div style="border:1px solid #D9D9D9;padding:25px 5%;margin-top:30px;flex:1 1 calc(50% - 30px);margin-left:30px;min-width:250px;max-width:100%">
-        <h3>Доставка по Беларуси</h3>
-        <p>Минимальная стоимость доставки 25руб</p>
-        <p>Стоимость доставки зависит от вида продукции, габаритов, веса, расположения населенного пункта.</p>
-        <p>Возможны исключения в виде бесплатной доставки.</p>
-    </div>
-</div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
                   </div>
               </div>
               </div>
