--- a/sravnenie.html
+++ b/sravnenie.html
@@ -383,105 +383,70 @@
                       <div class="span8 ">
                           <div class="ty-sidebox-important">
                               <div class="ty-sidebox-important__title">
-                                  <h1 class="ty-sidebox-important__title-wrapper">Доставка и оплата</h1>
+                                  <h1 class="ty-sidebox-important__title-wrapper">Сравнение</h1>
                               </div>
-                              <div class="breadcrumbs-grid ">
-                                <div id="breadcrumbs_158">
+                              <div class="breadcrumbs-grid">
+                                <div id="breadcrumbs_12">
                                     <div class="ty-breadcrumbs clearfix" itemscope itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem"><a href="/" class="ty-breadcrumbs__a" itemprop="item"><span itemprop="name">Главная</span><meta itemprop="position" content="1"></a></span><span class="ty-breadcrumbs__slash">/</span>
-                                    <span class="ty-breadcrumbs__current">Доставка и оплата</span></div>
-                                </div>
-                              </div>
-                              <div class="ty-sidebox-important__body">
-                                  <div class="ty-wysiwyg-content"  data-ca-live-editor-object-id="56" data-ca-live-editor-object-type="pages">
-                                    <h2>
-                                        <svg width="20" height="20" style="margin-right:10px">
-                                            <use href="assets/templates/new/images/sprite.svg#payments"></use>
-                                        </svg>Оплата
-                                    </h2>
-<p><strong><svg width="20" height="20" style="margin-right:5px">
-        <use href="assets/templates/new/images/sprite.svg#info"></use>
-    </svg>
-    Оплата производится наличными курьеру, либо посредством услуги E-POS</strong></p>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Оплата через ЕРИП</h3>
-    <div style="display:flex;flex-wrap:wrap;margin-left:-30px;margin-top:-30px">
-        <div style="margin-top:30px;flex:5 0 0%;margin-left:30px;min-width:250px;max-width:100%">
-            Вам необходимо произвести платеж в любой системе, позволяющей проводить оплату через ЕРИП (пункты банковского обслуживания, банкоматы, платежные терминалы, системы интернет-банкинга, клиент-банкинга и т.п.).
-            <ol>
-                <li>Для этого в перечне услуг e-POS перейдите в раздел: <strong>Сервис E-POS / E-POS - оплата товаров и услуг</strong></li>
-                <li>В поле "Номер лицевого счета" введите <strong>14387-1-1</strong> и нажмите "Продолжить"</li>
-                <li>Укажите сумму для оплаты</li>
-            </ol>
-        </div>
-        <div style="text-align:center;margin-top:30px;flex:1 1 0%;margin-left:30px;min-width:250px;max-width:100%;padding-top:0">
-            <img class="qr_code" src="doc/images/qr.png" alt="QR-код для оплаты" width="120" height="120" style="display:block;margin:0 auto" />
-            <strong style="display:inline-block;padding-top:1em;line-height:1.4">Отсканируйте QR-код для оплаты</strong></td>
-        </div>
-    </div>
-    <p><strong>ВНИМАНИЕ!</strong> До получения подтверждения оплаты со стороны ИП Изотов Д.В., <strong>ОБЯЗАТЕЛЬНО</strong> сохраняйте квитанцию или чек об оплате. В случае возникновения спорных ситуации и/или ошибки со стороны банка, ИП Изотов Д.В. может потребовать выслать копию квитанции или чека об оплате для подтверждения платежа.</p>
-</div>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Оплата по QR приложением Оплати</h3>
-    <p>“Оплати” — это мобильная система оплаты электронными деньгами. Платежи проводятся с помощью QR-кода. Для оплаты достаточно только смартфон!</p>
-    <p>Скачать приложение «Оплати» можно в App Store, Google Play, AppGallery:  <a href="https://getapp.o-plati.by/">https://getapp.o-plati.by</a>   Пополнение “виртуального кошелька” с карточек любых банков без комиссии, через ЕРИП, банковским переводом или переводом с другого кошелька «Оплати», подробнее на сайте сервиса https://www.o-plati.by</p>
-    <p><strong>Для оплаты </strong>приложением «Оплати» необходимо выбрать способ оплаты «Оплати» или указать в комментариях желаемый способ оплаты и оформить заказ.</p>
-    <p>На указанный в заказе e-mail или другой удобный мессенджер придет ссылка для оплаты заказа.</p>
-    <p>Перейдя по ссылке с мобильного устройства откроется приложение «Оплати» с детализацией платежа. Для оплаты необходимо нажать «Далее» и подтвердить платеж.</p>
-    <p>Если ссылка открывается с ПК, то на экране появится QR-код. Отсканировать QR-код приложением «Оплати» или камерой смартфона, подтвердить оплату.</p>
-    <p>Электронный чек оплаты смотреть в выписке платежей приложения «Оплати».</p>
-</div>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Онлайн-оплата</h3>
-    <p>Оплата банковскими картами осуществляется через <a href="https://alfa-biz.by/online/e_com/" rel="nofollow" target="_blank">ЗАО «Альфа-Банк»</a>.</p>
-    <p>К оплате принимаются карты международных платежных систем VISA, MasterCard, платежной системы БЕЛКАРТ. Оплату также можно совершить, посредством сервиса Apple Pay.</p>
-    <p>Безопасность совершения платежа обеспечивается современными методами проверки, шифрования и передачи данных по закрытым каналам связи.</p>
-    <p>Ввод данных карточки осуществляется на защищенной авторизационной странице банка. Для оплаты необходимо ввести реквизиты карточки: номер, имя держателя, срок действия и трехзначный код безопасности. Трёхзначный код безопасности (CVV2 для VISA, CVC2 для MasterCard) — это три цифры, находящиеся на обратной стороне карточки. Если карточка поддерживает технологию 3DSecure или Интернет-пароль для держателей карточек БЕЛКАРТ, Вы будете перенаправлены на страницу банка, выпустившего карточку, для ввода кода безопасности. При оплате с помощью Apple Pay выберете карту из приложения Wallet, воспользуйтесь код-паролем или иным способом аутентификации, в зависимости от того, какой способ выбран в приложении</p>
-    <p>Предоставляемая Вами персональная информация (например: имя, адрес, телефон, e-mail, номер банковской карты и прочее) является конфиденциальной и не подлежит разглашению. Данные карточки передаются только в зашифрованном виде и не сохраняются на данном интернет-ресурсе.</p>
-</div>
-<div style="border:1px solid #D9D9D9;padding:25px 5%; margin-top: 30px">
-    <h3>Оплата картами рассрочки</h3>
-    <p><span>К оплате принимаются карты рассрочки:<br /></span></p>
-    <ul>
-    <li><span>Карта покупок 2 месяца;</span></li>
-    <li><span>Карта Халва mix 2 месяца;</span></li>
-    <li><span>Карта Халва max 4 месяца;</span></li>
-    <li><span>Карта Черепаха от ВТБ 8 месяцев.</span></li>
-    <li><span>Онлайн рассрочка от РРБ банкана 3 месяца</span></li>
-    </ul>
-</div>
-                                    </div>
+                                    <span class="ty-breadcrumbs__current">Сравнение</span></div>
                                 </div>
                             </div>
+                            <div class="ty-mainbox-body">
+                                <div class="comparison-table-wrapper">
+                                <table class="compare-table comparison-table">
+                                    <thead>
+                                        <tr class="comparison-row"><td class="comparison-corner">
+                                    <a href="#" class="comparison-params-all comparison-link ty-btn ty-cr-product-button">Все параметры</a><br/>
+                                    <a href="#" class="comparison-params-unique comparison-link active ty-btn ty-cr-product-button">Различающиеся</a><br/>
+                                    <a href="#" class="comparison-params-remove-all comparison-link ty-btn ty-cr-product-button">Удалить всё</a>
+                                </td><td class="comparison-head" data-id="9379" data-list="default">
+                                        <a href="#" class="comparison-remove comparison-link" data-text="Обновляю список...">Удалить</a>
+                                    <div class="product-card">
+                                        <div class="product-card__inner">
+                                            <div class="product-card__img">
+                                                <img src="webp/assets/images/products/9379/small/vagonka-plastikovaya-pvkh-stella-standart-belaya-3-m-370x370.jpg.webp" alt="" title="" />
+                                            </div>
+                                            <a class="product-card__title" href="otdelochnye-materialy/paneli-pvh/panel-pvx-stella-standart-vagonka-belaya-3m/">Панель ПВХ Stella Standart Вагонка Белая 3м</a><br/>
+                                        </div>
+                                    </div>
+                                </td><td class="comparison-head" data-id="2188" data-list="default">
+                                        <a href="#" class="comparison-remove comparison-link" data-text="Обновляю список...">Удалить</a>
+                                    <div class="product-card">
+                                        <div class="product-card__inner">
+                                            <div class="product-card__img">
+                                                <img src="webp/assets/images/products/2188/small/vagonka.jpg.webp" alt="" title="" />
+                                            </div>
+                                            <a class="product-card__title" href="otdelochnye-materialy/paneli-pvh/panel-pvh-evroprofil-vagonka-belaya/">Панель ПВХ Европрофиль Вагонка белая</a><br/>
+                                        </div>
+                                    </div>
+                                </td><td class="comparison-head" data-id="7797" data-list="default">
+                                        <a href="#" class="comparison-remove comparison-link" data-text="Обновляю список...">Удалить</a>
+                                    <div class="product-card">
+                                        <div class="product-card__inner">
+                                            <div class="product-card__img">
+                                                <img src="assets/images/products/7797/small/c6df3c8d383c7af9085d611168900c49.jpg" alt="" title="" />
+                                            </div>
+                                            <a class="product-card__title" href="napolnye-pokrytiya/laminat/laminat-kronospan-castello-dub-kashemir-naturalnyij-k470/">Ламинат Kronospan Castello Дуб Кашемир натуральный k470</a><br/>
+                                        </div>
+                                    </div>
+                                </td></tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="comparison-row"><td class="comparison-param">
+                                    Цена
+                                </td><td class="comparison-cell field-price">3.56 pуб.</td><td class="comparison-cell field-price">4.61 pуб.</td><td class="comparison-cell field-price">17.7 pуб.</td></tr><tr class="comparison-row"><td class="comparison-param">
+                                    Производитель
+                                </td><td class="comparison-cell field-vendor.name">Stella</td><td class="comparison-cell field-vendor.name">Европрофиль</td><td class="comparison-cell field-vendor.name">Kronospan</td></tr><tr class="comparison-row"><td class="comparison-param">
+                                    Страна производства
+                                </td><td class="comparison-cell field-made_in">Россия</td><td class="comparison-cell field-made_in">Беларусь</td><td class="comparison-cell field-made_in">Беларусь</td></tr><tr class="comparison-row"><td class="comparison-param">
+                                    Коллекция
+                                </td><td class="comparison-cell field-option.d31">Standart</td><td class="comparison-cell field-option.d31"></td><td class="comparison-cell field-option.d31"></td></tr>
+                                    </tbody>
+                                </table>
+                                </div>
+                                                    </div>
+                            </div>
                         </div>
-                        <div class="span8">
-                            <div class="ty-sidebox-important">
-                                <div class="ty-sidebox-important__body">
-                                    <div class="ty-wysiwyg-content full"  data-ca-live-editor-object-id="56" data-ca-live-editor-object-type="pages">
-                                        <h2>
-                                            <svg width="20" height="20" style="margin-right:10px">
-                                                <use href="assets/templates/new/images/sprite.svg#delivery"></use>
-                                            </svg>Доставка
-                                        </h2>
-<div style="display:flex;flex-wrap:wrap;margin-left:-30px;margin-top:-30px">
-    <div style="border:1px solid #D9D9D9;padding:25px 5%;margin-top:30px;flex:1 1 calc(50% - 30px);margin-left:30px;min-width:250px;max-width:100%">
-        <h3>Доставка по г. Минску</h3>
-        <p>Минимальная сумма заказа на доставку 100 руб.</p>
-        <p>Бесплатная доставка от 700 руб.</p>
-        <p>Стоимость доставки суммой заказа до 200 руб 30руб больше 200р 15руб</p>
-        <p>Бесплатная доставка напольных покрытий от 15 м.кв</p>
-        <p>Доставка осуществляется до подъезда, либо до ворот частного дома.</p>
-    </div>
-    <div style="border:1px solid #D9D9D9;padding:25px 5%;margin-top:30px;flex:1 1 calc(50% - 30px);margin-left:30px;min-width:250px;max-width:100%">
-        <h3>Доставка по Беларуси</h3>
-        <p>Минимальная стоимость доставки 25руб</p>
-        <p>Стоимость доставки зависит от вида продукции, габаритов, веса, расположения населенного пункта.</p>
-        <p>Возможны исключения в виде бесплатной доставки.</p>
-    </div>
-</div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
                   </div>
               </div>
               </div>
