header fixes, april discount popup

--- a/index.html
+++ b/index.html
@@ -92,39 +92,35 @@
         <div class="container header">
             <div class="header-info">
                 <a href="/" class="header-logo">
-                    <img src="assets/templates/new/images/header-logo.png" alt="" width="233" height="74">
+                    <img src="assets/templates/new/images/icons/logo.svg" alt="Вметре логотип" width="233" height="74">
                 </a>
                 <div class="social">
                     <div>
-                        <div class="footer-menu__contacts-item" style="flex-direction:column;">
-
-                            <div style="display: flex;">
-                                <div class="footer-img__group">
-                                    <a href="https://msngr.link/vi/375293711174">
-                                        <div class="footer-menu__contacts-item_img viber"></div>
-                                    </a>
-                                    <a href="https://msngr.link/tg/375293711174">
-                                        <div class="footer-menu__contacts-item_img telegram"></div>
-                                    </a>
-                                </div>
-                                <a href="tel:+375293711174" class="footer-menu__contacts-item_title">
-                                    +375 (29) <span>371-11-74</span>
+                        <div class="footer-menu__contacts-item">
+                            <div class="footer-img__group">
+                                <a href="https://msngr.link/vi/375293711174">
+                                    <svg width="25" height="25"><use href="assets/templates/new/images/sprite.svg#whatsapp"></use></svg>
+                                </a>
+                                <a href="https://msngr.link/tg/375293711174">
+                                    <svg width="25" height="25"><use href="assets/templates/new/images/sprite.svg#telegram"></use></svg>
                                 </a>
                             </div>
-                            <div style="display: flex;">
-                                <div class="footer-img__group">
-                                    <a href="https://msngr.link/vi/375291060645">
-                                        <div class="footer-menu__contacts-item_img viber"></div>
-                                    </a>
-                                    <a href="https://msngr.link/tg/375291060645">
-                                        <div class="footer-menu__contacts-item_img telegram"></div>
-                                    </a>
-                                </div>
-                                <a href="tel:+375291060645" class="footer-menu__contacts-item_title">
-                                    +375 (29) <span>106-06-45</span>
+                            <a href="tel:+375293711174" class="footer-menu__contacts-item_title">
+                                +375 (29) <span>371-11-74</span>
+                            </a>
+                        </div>
+                        <div class="footer-menu__contacts-item">
+                            <div class="footer-img__group">
+                                <a href="https://msngr.link/vi/375291060645">
+                                    <svg width="25" height="25"><use href="assets/templates/new/images/sprite.svg#whatsapp"></use></svg>
+                                </a>
+                                <a href="https://msngr.link/tg/375291060645">
+                                    <svg width="25" height="25"><use href="assets/templates/new/images/sprite.svg#telegram"></use></svg>
                                 </a>
                             </div>
-
+                            <a href="tel:+375291060645" class="footer-menu__contacts-item_title">
+                                +375 (29) <span>106-06-45</span>
+                            </a>
                         </div>
 
                         <!--<div class="footer-menu__contacts-item mobile-hidden">
@@ -145,7 +141,7 @@
                     <div>
                         <div class="footer-menu__contacts-item mobile-hidden">
                             <a href="">
-                                <div class="footer-menu__contacts-item_img time"></div>
+                                <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#clock"></use></svg>
                             </a>
                             <a href="">
                                 <div class="footer-menu__contacts-item_title">пн-пт 10.00 - 19.00</div>
@@ -153,7 +149,7 @@
                         </div>
                         <div class="footer-menu__contacts-item mobile-hidden">
                             <a href="">
-                                <div class="footer-menu__contacts-item_img time"></div>
+                                <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#clock"></use></svg>
                             </a>
                             <a href="">
                                 <div class="footer-menu__contacts-item_title">сб-вс 10.00 - 18.00</div>
@@ -163,12 +159,15 @@
                 </div>
                 <div class="header-info__icon mobile-hidden">
                     <a class="header-btn__sale cm-dialog-opener cm-dialog-auto-size" data-ca-target-id="modal_flash">акции
-                        <div class="header-btn__sale-img"></div>
+                        <svg width="36" height="36"><use href="assets/templates/new/images/sprite.svg#discount"></use></svg>
                     </a>
-                    <div id="opener_call" class="callback-bt cm-dialog-opener cm-dialog-auto-size "
+                    <div id="opener_call" class="header-btn__btn header-btn__callback cm-dialog-opener cm-dialog-auto-size"
                         data-ca-target-id="content_call" data-ca-dialog-title="Заказать обратный звонок" rel="nofollow">
+                        <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#phone"></use></svg>
                     </div>
-                    <a href="https://www.instagram.com/vmetre.by/" target="_blank" class="insta-logo"></a>
+                    <a href="https://www.instagram.com/vmetre.by/" target="_blank" class="header-btn__btn">
+                        <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#instagram"></use></svg>
+                    </a>
                 </div>
             </div>
             <nav class="menu-wrapper">
@@ -343,20 +342,26 @@
 
                     <div class="menu-search">
                         <div class="search-btn__wrapper get-click">
-                            <div class="search-logo"></div>
+                            <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#magnifier"></use></svg>
                         </div>
                         <div class="comparison comparison-default added search-btn__wrapper">
                             <div class="sum count comparison-total">0</div>
-                            <a href="sravnenie/?cmp_ids=" class="header-search__icon dynamics"></a>
+                            <a href="sravnenie/?cmp_ids=" class="header-search__icon">
+                                <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#compare"></use></svg>
+                            </a>
                         </div>
                         <div class="search-btn__wrapper">
                             <div class="sum count msfavorites-total" data-data-list="default" data-data-type="resource">
                             </div>
-                            <a href="otlozhennyie-tovaryi/" class="header-search__icon like"></a>
+                            <a href="otlozhennyie-tovaryi/" class="header-search__icon">
+                                <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#heart"></use></svg>
+                            </a>
                         </div>
                         <div id="msMiniCart" class="search-btn__wrapper">
                             <div class="ms2_total_count sum">0</div>
-                            <a href="cart/" class="header-search__icon basket"></a>
+                            <a href="cart/" class="header-search__icon">
+                                <svg width="20" height="20"><use href="assets/templates/new/images/sprite.svg#cart"></use></svg>
+                            </a>
                         </div>
                         <form data-key="5b39587be23b329f509d2a87f0b48efb507b6f5e" action="rezultatyi-poiska/" method="get"
                             class="msearch2 search-panel" id="mse2_form">
@@ -2109,6 +2114,16 @@
 
                     <input type="hidden" name="af_action" value="700ec80d7e65a24b82120de5bfcffd8c" />
                 </form>
+            </div>
+        </div>
+    </div>
+    <div id="april_vinil" class="ajax_form hidden cm-dialog-auto-size" title="АКЦИЯ НА АПРЕЛЬ!"
+        style="max-width: 395px;">
+        <div class="hidden ui-dialog-content ui-widget-content">
+            <div class="object-container">
+                <div class="ty-control-group">
+                    При покупке <b>замкового винилового пола</b> от 10 м. кв. <b>укладка В ПОДАРОК!</b>
+                </div>
             </div>
         </div>
     </div>
