--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- <link rel="preload" crossorigin="anonymous" as="font" href="assets/templates/vmetre/fonts/MuseoSansBlack.woff" type="font/woff"> -->
-    <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/style.css" />
-    <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/dop.css" />
-    <link type="text/css" rel="stylesheet" href="assets/templates/new/dop.css" />
-    <link rel="stylesheet" href="assets/templates/new/styles.css">
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/style.css" /> -->
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/dop.css" /> -->
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/new/dop.css" /> -->
+    <!-- <link rel="stylesheet" href="assets/templates/new/styles.css"> -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css"/>
-    <link type="text/css" rel="stylesheet" href="assets/templates/new/redesign.css">
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/new/redesign.css"> -->
+    <link type="text/css" rel="stylesheet" href="assets/templates/new/finalized.css">
     <script src="assets/templates/vmetre/js/jquery-3.5.1.min.js?ver=1649617537"></script>
     <script src="assets/templates/vmetre/js/jquery-migrate-3.3.0.min.js?ver=1649617537"></script>
     <script>
