--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- <link rel="preload" crossorigin="anonymous" as="font" href="assets/templates/vmetre/fonts/MuseoSansBlack.woff" type="font/woff"> -->
     <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/style.css" /> -->
     <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/dop.css" /> -->
-    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/new/dop.css" /> -->
+    <link type="text/css" rel="stylesheet" href="assets/templates/new/dop.css" />
     <!-- <link rel="stylesheet" href="assets/templates/new/styles.css"> -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css"/>
     <!-- <link type="text/css" rel="stylesheet" href="assets/templates/new/redesign.css"> -->
-    <link type="text/css" rel="stylesheet" href="assets/templates/new/finalized.css">
+    <link type="text/css" rel="stylesheet" href="assets/templates/new/minified_inner.min.css">
     <script src="assets/templates/vmetre/js/jquery-3.5.1.min.js?ver=1649617537"></script>
     <script src="assets/templates/vmetre/js/jquery-migrate-3.3.0.min.js?ver=1649617537"></script>
     <script>
@@ -2437,6 +2437,32 @@
                                                     </form>
                                                 </div>
                                             </div>
+
+                                            <div class="mse2_pagination">
+                                                <div class="ty-pagination"><span
+                                                        class="ty-pagination__item ty-pagination__btn "><i
+                                                            class="ty-pagination__text-arrow"></i>&nbsp;<span
+                                                            class="ty-pagination__text">Назад</span></span><span
+                                                        class="ty-pagination__selected">1</span><a
+                                                        href="otdelochnye-materialy/?page=2"
+                                                        class="cm-history ty-pagination__item cm-ajax">2</a><a
+                                                        href="otdelochnye-materialy/?page=3"
+                                                        class="cm-history ty-pagination__item cm-ajax">3</a><a
+                                                        href="otdelochnye-materialy/?page=4"
+                                                        class="cm-history ty-pagination__item cm-ajax">4</a><a
+                                                        href="otdelochnye-materialy/?page=5"
+                                                        class="cm-history ty-pagination__item cm-ajax">5</a><span>...</span><a
+                                                        href="otdelochnye-materialy/?page=18"
+                                                        class="cm-history ty-pagination__item cm-ajax">18</a><a
+                                                        href="otdelochnye-materialy/?page=19"
+                                                        class="cm-history ty-pagination__item cm-ajax">19</a><a
+                                                        href="otdelochnye-materialy/?page=20"
+                                                        class="cm-history ty-pagination__item cm-ajax">20</a><a
+                                                        class="ty-pagination__item ty-pagination__btn ty-pagination__next cm-history cm-ajax ty-pagination__right-arrow"
+                                                        href="otdelochnye-materialy/?page=2"><span
+                                                            class="ty-pagination__text">Вперед</span>&nbsp;<i
+                                                            class="ty-pagination__text-arrow"></i></a></div>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -2444,32 +2470,6 @@
                             </div>
                         </div>
                         <div class="row-fluid">
-
-                            <div class="mse2_pagination">
-                                <div class="ty-pagination"><span
-                                        class="ty-pagination__item ty-pagination__btn "><i
-                                            class="ty-pagination__text-arrow"></i>&nbsp;<span
-                                            class="ty-pagination__text">Назад</span></span><span
-                                        class="ty-pagination__selected">1</span><a
-                                        href="otdelochnye-materialy/?page=2"
-                                        class="cm-history ty-pagination__item cm-ajax">2</a><a
-                                        href="otdelochnye-materialy/?page=3"
-                                        class="cm-history ty-pagination__item cm-ajax">3</a><a
-                                        href="otdelochnye-materialy/?page=4"
-                                        class="cm-history ty-pagination__item cm-ajax">4</a><a
-                                        href="otdelochnye-materialy/?page=5"
-                                        class="cm-history ty-pagination__item cm-ajax">5</a><span>...</span><a
-                                        href="otdelochnye-materialy/?page=18"
-                                        class="cm-history ty-pagination__item cm-ajax">18</a><a
-                                        href="otdelochnye-materialy/?page=19"
-                                        class="cm-history ty-pagination__item cm-ajax">19</a><a
-                                        href="otdelochnye-materialy/?page=20"
-                                        class="cm-history ty-pagination__item cm-ajax">20</a><a
-                                        class="ty-pagination__item ty-pagination__btn ty-pagination__next cm-history cm-ajax ty-pagination__right-arrow"
-                                        href="otdelochnye-materialy/?page=2"><span
-                                            class="ty-pagination__text">Вперед</span>&nbsp;<i
-                                            class="ty-pagination__text-arrow"></i></a></div>
-                            </div>
                             <div class="ab__sf_cat_desc">
                                 <div class="ty-wysiwyg-content ty-mb-s">
                                     <p>Ламинированный пол (ламинат) — напольное покрытие из натуральных материалов, отличающееся от паркета легким способом укладки, широким выбором цветов и фактур, а также низкой стоимостью.</p>
